Added versioned routes&controllers, added service layer, added login
